# claude-code-voice-vscode

./: .gitignore  .vscodeignore  CLAUDE.md  REVIEW-TODO.md  conftest.py  eslint.config.mjs  flake.nix  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.mts
.githooks/: pre-commit
.github/workflows/: ci.yml
.specify/memory/: constitution.md
models/: hey_claude.onnx
scripts/: build.mjs  generate_hey_claude_model.py  vitest-json-reporter.mjs
sidecar/: __main__.py  audio.py  command_words.py  config_validator.py  errors.py  logger.py  pipeline.py  protocol.py  server.py  shutdown.py  transcriber.py  vad.py  wakeword.py
specs/001-voice-mode/: interview-notes.md  learnings.md  plan.md  research.md  spec.md  tasks.md
specs/001-voice-mode/checklists/: requirements.md
specs/001-voice-mode/contracts/: socket-protocol.md
src/: claude-bridge.ts  commands.ts  config.ts  extension.ts  logger.ts  model-manager.ts  protocol.ts  sidecar.ts  socket-client.ts  status-bar.ts
tests/: pytest_json_reporter.py
tests/fixtures/: generate-fixtures.py
tests/integration/: edge-cases.test.ts  model-download.test.ts  sidecar-continuous-cancel.test.ts  sidecar-continuous-multi.test.ts  sidecar-continuous.test.ts  sidecar-errors.test.ts  sidecar-lifecycle.test.ts  sidecar-ptt-cancel.test.ts  sidecar-ptt.test.ts  sidecar-wake.test.ts  test_pipeline.py  test_server.py  test_structured_logging.py
tests/unit/python/: test_audio.py  test_command_words.py  test_config_validator.py  test_errors.py  test_logger.py  test_main.py  test_protocol.py  test_vad.py  (+3 more)
(+29 files in other folders)
