[project]
name = "claude-voice-sidecar"
version = "0.1.0"
description = "Voice mode sidecar for Claude Code VS Code extension"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "onnxruntime>=1.17.0",
    "openwakeword>=0.6.0",
    "webrtcvad>=2.0.10",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sidecar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
